db issues sorted, added FixtureMigration.php

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3'
 services:
     ni-mysql:
         image: 'mysql:8.0'
+        command: --default-authentication-plugin=mysql_native_password
         restart: always
         ports:
             - '${FORWARD_DB_PORT:-3306}:3306'
@@ -17,9 +18,9 @@ services:
         networks:
             - ni-api
 
-
     ni-php:
-        image: php:7.3.8-apache
+        build:
+            context: '.'
         depends_on:
             - ni-mysql
         volumes:
