--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "fruitcake/laravel-cors": "^2.0",
         "laravel/framework": "^8.54",
         "laravel/sanctum": "^2.11",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "league/csv": "^9.7"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
@@ -28,5 +29,10 @@
         }
     },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "scripts": {
+        "post-install-cmd": [
+            "php artisan insertFixtures"
+        ]
+    }
 }
