--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,17 @@
-APP_NAME=Laravel
+APP_NAME=Laravel-NI-Test
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:/ugk9UPfI7VbslsIXiYLwGwjwXFWQ0fkWCxfwlvmMc0=
 APP_DEBUG=true
-APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=ni-mysql-unique-name
 DB_PORT=3306
-DB_DATABASE=assessment
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=ni_assessment
+DB_USERNAME=ni_user
+DB_PASSWORD=ni_pass
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -21,31 +20,9 @@ QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
-MEMCACHED_HOST=127.0.0.1
-
-REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
-REDIS_PORT=6379
-
-MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
-MAIL_FROM_NAME="${APP_NAME}"
-
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
-AWS_USE_PATH_STYLE_ENDPOINT=false
+MEMCACHED_HOST=memcached
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 PUSHER_APP_CLUSTER=mt1
-
-MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
-MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
