- added a external port var to env

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=ni-mysql-unique-name
 DB_PORT=3306
+FORWARD_DB_PORT=63307
 DB_DATABASE=ni_assessment
 DB_USERNAME=ni_user
 DB_PASSWORD=ni_pass
